@@ -48,7 +48,7 @@ int main(int argc,char* argv[])
   std::cerr << "sizeof(ByteRGB) is " << sizeof(ByteRGB) << " (3 is good)\n";  
   std::cerr << "sizeof(Vertex) is " << sizeof(Vertex) << " (32 is good)\n";
 
-  std::cerr << "GL Extensions are :\n\"" << glGetString(GL_EXTENSIONS) << "\"\n";
+  //  std::cerr << "GL Extensions are :\n\"" << glGetString(GL_EXTENSIONS) << "\"\n";
   //std::cerr << "GLU Extensions are :\n\"" << gluGetString(GL_EXTENSIONS) << "\"\n";
 
   std::cerr << "Commencing main loop...\n";
