@@ -3,6 +3,7 @@ From release 0.1.0:
  - Progress dialog separated
  - Variation uses % scale
  - Cosmetic changes
+ - Add multiscale Perlin noise step
 
 From release 0.0.3:
  - Bump version number to 0.1.0
